--- a/index.html
+++ b/index.html
@@ -207,34 +207,34 @@
             Self Working from Home (Learning)
           </p>
           <p>
-            Sept 2024 - Present
+            Octobar 2024 - Present
           </p>
           <p>
             On-Site - Full Time
           </p>
           <p>
-            Hangu, KP Pakistan
+           Dhaka
           </p>
           <p>
-            Skill: Flutter, Dart, GetX, NodeJS, MongoDB, Git, GitHub, Clean Coding, Custom Widgets
+            Skill: Flutter, Dart, GetX, Git, GitHub, Clean Coding, Custom Widgets
           </p>
         </div>
         <div class="box">
           <div class="topic"><b>Flutter Developer</b></div>
           <p>
-            @DevHq.In - Internship
+            @Bdcalling-Academy - Internship
           </p>
           <p>
-            Jan 2025 - Present
+            August 2023 - December 2023
           </p>
           <p>
-            Remote
+            Offline
           </p>
           <p>
-            Hangu, KP Pakistan
+            Banasree,Dhaka
           </p>
           <p>
-            Skill: Flutter, Dart, GetX, NodeJS, MongoDB, Git, GitHub, Clean Coding, Custom Widgets
+            Skill: Flutter, Dart, GetX,  Git, GitHub, Clean Coding, Custom Widgets
           </p>
         </div>
       </div>
